<resources>
    //Version
    <string name="versionLabel">Current Version:</string>
    <string name="version">1</string>

    //Welcome.java
    <string name="app_name">HootApp</string>
    <string name="hootText">Hoot Hoot</string>
    <string name="welcomeLogin">Login</string>
    <string name="welcomeSignup">Sign up</string>

    //Navigation
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    //Add Hoot page
    <string name="submitHoot">Toot that Hoot</string>
    <string name="hoot_button">Toot that Hoot</string>
    <string name="contact_button">Select Contact</string>
    <string name="email_button">Send Email with Hoot</string>
    <string name="hashtag_prompt">Choose a Hashtag</string>
    <string-array name="hashtags_array">
        <item> </item>
        <item>Hoot Topic</item>
        <item>Owlcoholics</item>
        <item>Orly?</item>
        <item>Night Snacks</item>
        <item>Beak Airful</item>
    </string-array>


    //Dropdown menu and action bar
    <string name="menuSettings">Settings</string>
    <string name="menuReport">Report</string>
    <string name="menuLogout">Logout</string>
    <string name="new_hoot">New Hoot</string>
    <string name="menu">Menu</string>
    <string name="chronology">Chronology</string>
    <string name="settings">Settings</string>
    <string name="clear">Clear</string>
    <string name="logout">Logout</string>
    <string name="userstimeline">Users</string>
    <string name="hoottimeline">All Hoots</string>
    <string name="followtimeline">Follow Timeline</string>
    <string name="personaltimeline">Personal Timeline</string>

    //Reports or timeline page
    <string name="reportTitle">Report</string>
    <string name="delete_hoot">Delete Hoot</string>
    <string name="date" />

    //Signup page
    <string name="SignupTitle">Sign up to Hoot at People</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signupButton">Sign Up</string>

    //Login page
    <string name="hootLogin">Log IN to Hoot OUT</string>
    <string name="loginEmail">E-mail</string>
    <string name="loginPassword">Password</string>
    <string name="loginButton">Log In</string>

    //Info page
    <string name="appDesc">Hoot Hoot allows the user to create Hoots. These are similar to tweets, but you make them at night!</string>
    <string name="appMoreInfo">For more information about the Hoot Hoot app or to provide feedback please talk to me in person. I sit over in the corner near Brian and John.</string>
    <string name="hootContent">Hoot it Here!</string>
    <string name="addHootDate" />

    //Map page and associated map strings
    <string name="title_map">Map</string>
    <string name="google_maps_key">AIzaSyC7ZAUy9QcX1v4Bw2tPpMIVw-6apJxrHyo</string>

    /other for now
    <string name="searchHootsLbl">Search Hoot\'s</string>
    <string name="favouritesHootLbl">Favourite Hoot\'s</string>
    <string name="addAHootLbl">Hoot Check In</string>
    <string name="updateAHootLbl">Update a Hoot</string>
    <string name="addHootBtnLbl">Add Hoot</string>
    <string name="updateHootBtnLbl">Update Hoot</string>
    <string name="saveHootBtn">Save Hoot</string>
    <string name="recentlyViewedLbl">Recently Added Hoot\'s</string>
    <string name="hootNameLbl">Name :</string>
    <string name="hootShopLbl">Shop :</string>
    <string name="hootPriceLbl">Price :</string>
    <string name="hootRatingLbl">Star Rating</string>
    <string name="hootDetailsLbl">Full Hoot Details</string>
    <string name="searchHootNameHint">Enter a Hoot Title </string>
    <string name="informationLbl">Information</string>
    <string name="recentlyViewedListEmptyMessage">You have no Hoot\'s added, go have a hoot!</string>
    <string name="deleteHootsLbl">Delete Hoot\'s</string>
    <string name="appWebsite">appWebsite</string>
    <string name="email_subject">Hoot to you</string>

    //Help page
    <string name="appHelpTitle">Hoot Hoot Help</string>
    <string name="appHelp">This is the help screen for the Hoot app</string>
    <string name="appHelpExtra">Basically\, if you need help on using this app, you probably shouldn\'t be using it</string>

    //Settings
    <string name="username_summary">Please enter your user name</string>
    <string name="username">Username</string>
    <string name="password_summary">You may set your password here</string>
    <string name="passwordChange">Password</string>
    <string name="nmr_hoots">Configure Downloads</string>
    <string name="nmr_hoots_summary">How many Hoots to store locally?</string>
    <string name="set_refresh_interval">Refresh</string>
    <string name="set_refresh_interval_summary">Frequency of cloud updates (minutes)</string>
    <string name="hootWords">hootWords</string>
    <string name="hootmain">Enter text here</string>
    <string name="followButton">follow</string>


</resources>
