<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="app.hoot.activity.PersonalTimeline" >

    <item android:id="@+id/menu_item_new_hoot"
        android:icon="@drawable/hoot_owl"
        android:title="@string/new_hoot"
        app:showAsAction="ifRoom|withText"
        />

    <item
        android:id="@+id/menu"
        android:orderInCategory="100"
        android:title="@string/menu"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/settings"
                android:orderInCategory="100"
                android:title="@string/settings" />
            <item
                android:id="@+id/map"
                android:orderInCategory="100"
                android:title="@string/title_map" />

            <item
                android:id="@+id/hoottimeline"
                android:orderInCategory="100"
                android:title="@string/hoottimeline" />

            <item
                android:id="@+id/usertimeline"
                android:orderInCategory="100"
                android:title="@string/userstimeline" />


            <item
                android:id="@+id/logout"
                android:orderInCategory="100"
                android:title="@string/logout"
                app:showAsAction="ifRoom" />
        </menu>
    </item>
</menu>