<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu"
        android:orderInCategory="100"
        android:icon="@drawable/settingsmenu"
        android:title="@string/menu">
        <menu>
            <item
                android:id="@+id/chronology"
                android:orderInCategory="100"
                android:title="@string/chronology" />
            <item
                android:id="@+id/settings"
                android:orderInCategory="100"
                android:title="@string/settings" />

            <item
                android:id="@+id/logout"
                android:orderInCategory="100"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>