<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.hoot.activity.AddHoot">

    <TextView
        android:id="@+id/addHootDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addHootDate"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/hootContent"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Spinner
        android:id="@+id/addHashtagSpinner"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hootText" />

    <TextView
        android:id="@+id/countdown"
        android:layout_width="72dp"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="180dp"
        android:text="TextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/hootContent"
        android:layout_width="225dp"
        android:layout_height="110dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="top|left"
        android:hint="@string/hootContent"
        android:inputType="textMultiLine"
        android:maxLines="4"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addHashtagSpinner" />
    <!-- gravity Reference: https://stackoverflow.com/questions/15851310/android-edit-text-how-to-start-typing-at-the-top-left -->
    <!-- input type Reference: https://stackoverflow.com/questions/4233626/allow-multi-line-in-edittext-view-in-android -->

    <Button
        android:id="@+id/submitHoot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/submitHoot"
        app:layout_constraintLeft_toRightOf="@+id/hootText"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/hootContent" />

    <Button
        android:id="@+id/contactButton"
        android:layout_width="171dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/contact_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submitHoot" />

    <Button
        android:id="@+id/emailButton"
        android:layout_width="189dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/email_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submitHoot" />
    <!-- might include later   style="@android:style/Holo.Light.ButtonBar" -->

    <TextView
        android:id="@+id/hootText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/hootText"
        android:textAppearance="@android:style/TextAppearance.Large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="48dp" />



</android.support.constraint.ConstraintLayout>
