<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">
    <!--    android:background="@color/hootBackground"-->

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:textAlignment="center">

        <EditText
            android:id="@+id/hootContent"
            android:layout_width="match_parent"
            android:layout_height="145dp"
            android:layout_below="@+id/hoot"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:gravity="top|start"
            android:hint="Hoot Here"
            android:inputType=""
            android:maxLength="140">

        </EditText>

        <TextView
            android:id="@+id/hootDate"
            android:layout_width="179dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text=""
            android:textSize="14sp"
            android:textStyle="bold"
            android:paddingStart="8dp"
            android:paddingEnd="4dp"
            android:paddingBottom="8dp"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/hootButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/hoot_button" />

    <Button
        android:id="@+id/contactButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/contact_button" />

    <Button
        android:id="@+id/emailButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/email_button" />

</LinearLayout>
